--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=API-SpringBoot
+spring.application.name= API-SpringBoot
+spring.datasource.url= jdbc.postgresql://localhost:5432/products-api
+spring.datasource.username= postgres
+spring.datasource.password= postgres
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
